--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <div>
-
-        </div>
+        <nav class="nav-header">
+            <div class="col-4">
+                <a href="">Uomo</a>
+                <a href="">Donna</a>
+                <a href="">Bambini</a>
+            </div>
+            <div class="col-4">
+                <img src="./img/boolean-logo.png" alt="" class="logo">
+            </div>
+            <div class="col-4">
+                ?
+            </div>
+        </nav>
     </header>
     <main>
         <div></div>
