--- a/index.html
+++ b/index.html
@@ -23,7 +23,28 @@
         </nav>
     </header>
     <main>
-        <div></div>
+        <div class="container container_top">
+            <div class="col-4">
+                <img src="./img/1.webp" alt="">
+            </div>
+            <div class="col-4">
+                <img src="./img/2.webp" alt="">
+            </div>
+            <div class="col-4">
+                <img src="./img/3.webp" alt="">
+            </div>
+        </div>
+        <div class="container container_bot">
+            <div class="col-4">
+                <img src="./img/1.webp" alt="">
+            </div>
+            <div class="col-4">
+                <img src="./img/2.webp" alt="">
+            </div>
+            <div class="col-4">
+                <img src="./img/3.webp" alt="">
+            </div>
+        </div>
     </main>
     <footer>
 
