--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 <body>
     <header>
         <nav class="nav-header">
-            <div class="col-4">
-                <a href="">Uomo</a>
-                <a href="">Donna</a>
-                <a href="">Bambini</a>
-            </div>
-            <div class="col-4">
-                <img src="./img/boolean-logo.png" alt="" class="logo">
-            </div>
-            <div class="col-4">
-                ?
+            <div class="container">
+                <div class="col-4">
+                    <a href="">Uomo</a>
+                    <a href="">Donna</a>
+                    <a href="">Bambini</a>
+                </div>
+                <div class="col-4">
+                    <img src="./img/boolean-logo.png" alt="" class="logo">
+                </div>
+                <div class="col-4">
+                    ?
+                </div>
             </div>
         </nav>
     </header>
@@ -26,28 +28,64 @@
         <div class="container container_top">
             <div class="col-4">
                 <img src="./img/1.webp" alt="">
+                <p class="brand">Levi's</p>
+                <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
+                <p class="outfit-price">14,99</p>
+                <p class="outfit-price_discount">29,99</p>
             </div>
             <div class="col-4">
                 <img src="./img/2.webp" alt="">
+                <p class="brand">Levi's</p>
+                <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
+                <p class="outfit-price">14,99</p>
+                <p class="outfit-price_discount">29,99</p>
             </div>
             <div class="col-4">
                 <img src="./img/3.webp" alt="">
+                <p class="brand">Levi's</p>
+                <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
+                <p class="outfit-price">14,99</p>
+                <p class="outfit-price_discount">29,99</p>
             </div>
         </div>
         <div class="container container_bot">
             <div class="col-4">
                 <img src="./img/1.webp" alt="">
+                   <p class="brand">Levi's</p>
+                <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
+                <p class="outfit-price">14,99</p>
+                <p class="outfit-price_discount">29,99</p>            
             </div>
             <div class="col-4">
                 <img src="./img/2.webp" alt="">
+                   <p class="brand">Levi's</p>
+                <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
+                <p class="outfit-price">14,99</p>
+                <p class="outfit-price_discount">29,99</p>             
             </div>
             <div class="col-4">
                 <img src="./img/3.webp" alt="">
+                    <p class="brand">Levi's</p>
+                <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
+                <p class="outfit-price">14,99</p>
+                <p class="outfit-price_discount">29,99</p>            
             </div>
         </div>
     </main>
     <footer>
-
+        <div class="container">
+            <div class="col-6">
+                <a href="">Boolenado s.r.l</a>
+                <div>
+                    <a href="">Informazioni legali</a>
+                    <a href="">Informazione sulla privacy</a>
+                    <a href="">Diritto di recesso</a>
+                </div>
+            </div>
+            <div class="col-6">
+                <a href="">Trovaci acnhe su</a>      
+            </div>
+        </div>
     </footer>
 </body>
 </html>
