--- a/index.html
+++ b/index.html
@@ -27,11 +27,18 @@
     <main>
         <div class="container container_top">
             <div class="col-4">
-                <img src="./img/1.webp" alt="">
-                <p class="brand">Levi's</p>
-                <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
-                <p class="outfit-price">14,99</p>
-                <p class="outfit-price_discount">29,99</p>
+                <img src="./img/1.webp" alt="" class="img-top">
+                <img src="./img/1b.webp" alt="" class="img-back">
+                <div class="discount">-50%</div>
+                <div class="free">Sostenibilità</div>
+                <div class="heart">&hearts;</div>
+                <div>
+                    <p class="brand">Levi's</p>
+                    <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
+                    <p class="outfit-price">14,99</p>
+                    <p class="outfit-price_discount">29,99</p>
+                </div>
+                
             </div>
             <div class="col-4">
                 <img src="./img/2.webp" alt="">
