--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
     <header>
         <nav class="nav-header">
             <div class="container">
-                <div class="col-4">
-                    <a href="">Uomo</a>
-                    <a href="">Donna</a>
-                    <a href="">Bambini</a>
-                </div>
-                <div class="col-4">
-                    <img src="./img/boolean-logo.png" alt="" class="logo">
-                </div>
-                <div class="col-4">
-                    ?
+                <div class="col-12">
+                    <div>
+                        <a href="">Donna</a>
+                        <a href="">Uomo</a>
+                        <a href="">Bambini</a>
+                    </div>
+                    <div>
+                        <img src="./img/boolean-logo.png" alt="" class="logo">
+                    </div>
+                    <di>
+                        <a href="">baidge</a>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -38,59 +40,90 @@
                     <p class="outfit-price">14,99</p>
                     <p class="outfit-price_discount">29,99</p>
                 </div>
-                
             </div>
             <div class="col-4">
-                <img src="./img/2.webp" alt="">
-                <p class="brand">Levi's</p>
-                <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
-                <p class="outfit-price">14,99</p>
-                <p class="outfit-price_discount">29,99</p>
+                <img src="./img/2.webp" alt="" class="img-top">
+                <img src="./img/2b.webp" alt="" class="img-back">
+                <div class="discount">-50%</div>
+                <div class="heart">&hearts;</div>
+                <div>
+                    <p class="brand">Levi's</p>
+                    <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
+                    <p class="outfit-price">14,99</p>
+                    <p class="outfit-price_discount">29,99</p>
+                </div>
             </div>
             <div class="col-4">
-                <img src="./img/3.webp" alt="">
-                <p class="brand">Levi's</p>
-                <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
-                <p class="outfit-price">14,99</p>
-                <p class="outfit-price_discount">29,99</p>
+                <img src="./img/3.webp" alt="" class="img-top">
+                <img src="./img/3b.webp" alt="" class="img-back">
+                <div class="discount">-50%</div>
+                <div class="heart">&hearts;</div>
+                <div>
+                    <p class="brand">Levi's</p>
+                    <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
+                    <p class="outfit-price">14,99</p>
+                    <p class="outfit-price_discount">29,99</p>
+                </div>
             </div>
         </div>
         <div class="container container_bot">
             <div class="col-4">
-                <img src="./img/1.webp" alt="">
-                   <p class="brand">Levi's</p>
-                <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
-                <p class="outfit-price">14,99</p>
-                <p class="outfit-price_discount">29,99</p>            
-            </div>
-            <div class="col-4">
-                <img src="./img/2.webp" alt="">
-                   <p class="brand">Levi's</p>
-                <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
-                <p class="outfit-price">14,99</p>
-                <p class="outfit-price_discount">29,99</p>             
-            </div>
-            <div class="col-4">
-                <img src="./img/3.webp" alt="">
+                <img src="./img/4.webp" alt="" class="img-top">
+                <img src="./img/4b.webp" alt="" class="img-back">
+                <div class="discount">-50%</div>
+                <div class="heart">&hearts;</div>
+                <div class="free">Sostenibilità</div>
+                <div>
                     <p class="brand">Levi's</p>
-                <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
-                <p class="outfit-price">14,99</p>
-                <p class="outfit-price_discount">29,99</p>            
+                    <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
+                    <p class="outfit-price">14,99</p>
+                    <p class="outfit-price_discount">29,99</p>
+                </div>        
+            </div>
+            <div class="col-4">
+                <img src="./img/5.webp" alt="" class="img-top">
+                <img src="./img/5b.webp" alt="" class="img-back">
+                <div class="heart">&hearts;</div>
+                <div>
+                    <p class="brand">Levi's</p>
+                    <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
+                    <p class="outfit-price">14,99</p>
+                    <p class="outfit-price_discount">29,99</p>
+                </div>       
+            </div>
+            <div class="col-4">
+                <img src="./img/6.webp" alt="" class="img-top">
+                <img src="./img/6b.webp" alt="" class="img-back">
+                <div class="heart">&hearts;</div>
+                <div>
+                    <p class="brand">Levi's</p>
+                    <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
+                    <p class="outfit-price">14,99</p>
+                    <p class="outfit-price_discount">29,99</p>
+                </div>      
             </div>
         </div>
     </main>
     <footer>
         <div class="container">
-            <div class="col-6">
-                <a href="">Boolenado s.r.l</a>
+            <div class="col-12">
                 <div>
-                    <a href="">Informazioni legali</a>
-                    <a href="">Informazione sulla privacy</a>
-                    <a href="">Diritto di recesso</a>
+                    <a href="">Boolenado s.r.l</a>
+                    <div>
+                        <a href="">Informazioni legali</a>
+                        <a href="">Informazione sulla privacy</a>
+                        <a href="">Diritto di recesso</a>
+                    </div>
                 </div>
-            </div>
-            <div class="col-6">
-                <a href="">Trovaci acnhe su</a>      
+               <div>
+                    <a href="">Trovaci acnhe su</a>
+                    <div>
+                        <a href="">T</a>
+                        <a href="">F</a>
+                        <a href="">I</a>
+                        <a href="">Y</a>
+                    </div>
+               </div>
             </div>
         </div>
     </footer>
