fix-container/fix-navbar

--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
         </nav>
     </header>
     <main>
-        <div class="container container_top">
+        <div class="container container-main">
             <div class="col-4">
-                <img src="./img/1.webp" alt="" class="img-top">
-                <img src="./img/1b.webp" alt="" class="img-back">
-                <div class="discount">-50%</div>
-                <div class="free">Sostenibilità</div>
-                <div class="heart">&hearts;</div>
+                <div>
+                    <img src="./img/1.webp" alt="" class="img-top">
+                    <img src="./img/1b.webp" alt="" class="img-back">
+                    <div class="discount">-50%</div>
+                    <div class="free">Sostenibilità</div>
+                    <div class="heart">&hearts;</div>
+                </div>
                 <div>
                     <p class="brand">Levi's</p>
                     <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
@@ -65,8 +67,7 @@
                     <p class="outfit-price_discount">29,99</p>
                 </div>
             </div>
-        </div>
-        <div class="container container_bot">
+
             <div class="col-4">
                 <img src="./img/4.webp" alt="" class="img-top">
                 <img src="./img/4b.webp" alt="" class="img-back">
