--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
                 </div>
             </div>
             <div class="col-4">
-                <img src="./img/2.webp" alt="" class="img-top">
-                <img src="./img/2b.webp" alt="" class="img-back">
-                <div class="discount">-50%</div>
-                <div class="heart">&hearts;</div>
+                <div>
+                    <img src="./img/2.webp" alt="" class="img-top">
+                    <img src="./img/2b.webp" alt="" class="img-back">
+                    <div class="discount">-50%</div>
+                    <div class="heart">&hearts;</div>
+                </div>
                 <div>
                     <p class="brand">Levi's</p>
                     <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
@@ -56,10 +58,12 @@
                 </div>
             </div>
             <div class="col-4">
-                <img src="./img/3.webp" alt="" class="img-top">
-                <img src="./img/3b.webp" alt="" class="img-back">
-                <div class="discount">-50%</div>
-                <div class="heart">&hearts;</div>
+                <div>
+                    <img src="./img/3.webp" alt="" class="img-top">
+                    <img src="./img/3b.webp" alt="" class="img-back">
+                    <div class="discount">-50%</div>
+                    <div class="heart">&hearts;</div>
+                </div>
                 <div>
                     <p class="brand">Levi's</p>
                     <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
@@ -69,11 +73,13 @@
             </div>
 
             <div class="col-4">
-                <img src="./img/4.webp" alt="" class="img-top">
-                <img src="./img/4b.webp" alt="" class="img-back">
-                <div class="discount">-50%</div>
-                <div class="heart">&hearts;</div>
-                <div class="free">Sostenibilità</div>
+                <div>
+                    <img src="./img/4.webp" alt="" class="img-top">
+                    <img src="./img/4b.webp" alt="" class="img-back">
+                    <div class="discount">-50%</div>
+                    <div class="heart">&hearts;</div>
+                    <div class="free">Sostenibilità</div>
+                </div>
                 <div>
                     <p class="brand">Levi's</p>
                     <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
@@ -82,9 +88,11 @@
                 </div>        
             </div>
             <div class="col-4">
-                <img src="./img/5.webp" alt="" class="img-top">
-                <img src="./img/5b.webp" alt="" class="img-back">
-                <div class="heart">&hearts;</div>
+                <div>
+                    <img src="./img/5.webp" alt="" class="img-top">
+                    <img src="./img/5b.webp" alt="" class="img-back">
+                    <div class="heart">&hearts;</div>
+                </div>
                 <div>
                     <p class="brand">Levi's</p>
                     <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
@@ -93,9 +101,11 @@
                 </div>       
             </div>
             <div class="col-4">
-                <img src="./img/6.webp" alt="" class="img-top">
-                <img src="./img/6b.webp" alt="" class="img-back">
-                <div class="heart">&hearts;</div>
+                <div>
+                    <img src="./img/6.webp" alt="" class="img-top">
+                    <img src="./img/6b.webp" alt="" class="img-back">
+                    <div class="heart">&hearts;</div>
+                </div>
                 <div>
                     <p class="brand">Levi's</p>
                     <p class="outfit-name">RELAXED FIT TEE UINISEX</p>
